--- a/journal/Week1/Week1.Rmd
+++ b/journal/Week1/Week1.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Week1"
 author: "Thomas Rosenthal"
+
 date: "14/01/2021"
 output:
   github_document:
@@ -10,7 +11,7 @@ output:
 ## Weekly Reflection: Getting Started
 
 Things are started!
-I've built a scraper for data on Eight Ounce Coffee's (website)[https://eightouncecoffee.ca/]. I've focused on Coffee's from The Library Speciality Coffee (TLS) here in Toronto.
+I've built a scraper for data on Eight Ounce Coffee's [website](https://eightouncecoffee.ca/). I've focused on Coffee's from The Library Speciality Coffee (TLS) here in Toronto.
 
 The basic concept is:
 
