--- a/journal/Week2/Week2.Rmd
+++ b/journal/Week2/Week2.Rmd
@@ -8,7 +8,7 @@ output:
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, message=FALSE, warning=FALSE)
 knitr::opts_knit$set(root.dir  = '../..')
 ```
 
@@ -412,7 +412,7 @@ Needless to say, wow, there is a lot to make these things interesting and intell
 ### Coffee Project
 
 Things are going well overall. 
-I've been using Eight Ounce Coffee's (website)[https://eightouncecoffee.ca/] to start some scraping. My first week's scraper worked well, but wasn't rerunable in the second week. It seems there will be inconsitencies in the precise way they upload bags to the website -- mostly based on the number leading /n characters in the ```html_node``` character string. These /n characters are used as splitting mechanisms to grab the coffee name, rewrite it as a hypenated string, and then pushed into a for loop with ```read_html```. These individual hyperlinks to pull in the coffee details. When the data comes in, it's a bit messy, and it looks like some weeks will have more details available than others. I will have to build something flexible enough to properly write each metric to the appropriate column. Unlike last week, I wrote this week's coffee to a csv when it's all said and done so I don't have to rerun the HTML files again. Stuff gets taken down very quickly, as you'd expect. Once a week seems good though (having actually popped into The Library Specialty Coffee this week, their shelf mirrors Eight Ounce's website.) It shouldn't take long to grab a lot more roasters and use the same methodology. The resuling csv should be about 5 coffees per roaster, per week (maybe slower for some of the smaller roasters), so we'll have close to 100 coffees a week scraped off Eight Ounce. That's really nice.
+I've been using Eight Ounce Coffee's [website](https://eightouncecoffee.ca/) to start some scraping. My first week's scraper worked well, but wasn't rerunable in the second week. It seems there will be inconsitencies in the precise way they upload bags to the website -- mostly based on the number leading /n characters in the ```html_node``` character string. These /n characters are used as splitting mechanisms to grab the coffee name, rewrite it as a hypenated string, and then pushed into a for loop with ```read_html```. These individual hyperlinks to pull in the coffee details. When the data comes in, it's a bit messy, and it looks like some weeks will have more details available than others. I will have to build something flexible enough to properly write each metric to the appropriate column. Unlike last week, I wrote this week's coffee to a csv when it's all said and done so I don't have to rerun the HTML files again. Stuff gets taken down very quickly, as you'd expect. Once a week seems good though (having actually popped into The Library Specialty Coffee this week, their shelf mirrors Eight Ounce's website.) It shouldn't take long to grab a lot more roasters and use the same methodology. The resuling csv should be about 5 coffees per roaster, per week (maybe slower for some of the smaller roasters), so we'll have close to 100 coffees a week scraped off Eight Ounce. That's really nice.
 
 
 
