--- a/journal/Week4/Week4.Rmd
+++ b/journal/Week4/Week4.Rmd
@@ -2,7 +2,9 @@
 title: "Week4"
 author: "Thomas Rosenthal"
 date: "06/02/2021"
-output: html_document
+output:
+  github_document:
+    html_preview: false
 ---
 
 ```{r setup, echo=FALSE}
