new shiny app + models

--- a/scripts/draft_model.Rmd
+++ b/scripts/draft_model.Rmd
@@ -10,7 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 ```{r message=FALSE}
-library(drake)
+#library(drake)
 library(tidymodels)
 library(tidyverse)
 library(rvest)
@@ -189,9 +189,15 @@ sqldf::sqldf("select d.*, n1.Trait as Trait1, n1.[Group] as Group1
 ```
 
 ```{r}
-merged_data %>% select(Tastingnotes,TastingNote2,Trait2,Group2,TastingNote3,Trait3,Group3) %>% distinct() %>%  
-  filter(is.na(Trait2))
+merged_data %>% select(Tastingnotes,TastingNote1,Trait1,Group1, TastingNote2,Trait2,Group2,TastingNote3,Trait3,Group3) %>% distinct() %>%  
+  filter(is.na(Trait1))
 ```
+
+```{r}
+head(merged_data)
+```
+
+
 
 ```{r}
 #select the column to predict
@@ -209,10 +215,12 @@ colnames(prep_data)[4] <- "predictor"
 ```{r}
 #prep_data %>% count(Trait1_Fruity)
 prep_data = prep_data %>% group_by(Variety1) %>% 
-            filter(n() >= 5)
+            filter(n() >= 5) 
 
 prep_data = prep_data %>% group_by(Processing1) %>% 
-            filter(n() >= 5)
+            filter(n() >= 5) 
+
+
 
 prep_data = prep_data %>% mutate(predictor = ifelse(predictor ==0, 'absent','present') %>% 
                      as.factor() %>% 
@@ -221,6 +229,7 @@ prep_data = prep_data %>% mutate(predictor = ifelse(predictor ==0, 'absent','pre
 
 
 ```{r}
+#RSAMPLE PACKAGE
 set.seed(555)
 # Put 3/4 of the data into the training set 
 data_split <- initial_split(prep_data, prop = 3/4)
@@ -228,20 +237,17 @@ data_split <- initial_split(prep_data, prop = 3/4)
 # Create data frames for the two sets:
 train_data <- training(data_split)
 test_data  <- testing(data_split)
+
+tidy_kfolds <- vfold_cv(train_data)
 ```
 
 ```{r}
-lr_mod = 
-  logistic_reg() %>% 
-  set_engine("glm") 
-```
-
-```{r}
+#RECIPES PACKAGE
 #amnt <- c("present", "absent")
-
 lr_recipe <- 
   recipe(predictor ~ ., data = train_data) %>% 
   #update_role(Coffeename, new_role = "ID") %>% 
+  #step_knnimpute("Country") %>% 
   step_dummy(all_nominal(), -all_outcomes()) %>% 
   # step_num2factor(
   #   `Trait1_Nutty/Cocoa`,
@@ -255,12 +261,38 @@ summary(lr_recipe)
 ```
 
 ```{r}
+#PARSNIP PACKAGE
+lr_mod = 
+  logistic_reg() %>% 
+  set_engine("glm") 
+```
+
+```{r}
+#DIALS PACKAGE
+
+```
+
+
+```{r}
+#TUNE PACKAGE
+lr_tune <- tune_grid(lr_mod,
+          lr_recipe,
+          resamples = tidy_kfolds)
+
+lr_param <- lr_tune %>% select_best("roc_auc")
+
+lr_mod <- finalize_model(lr_mod,lr_param)
+```
+
+
+```{r}
 lr_workflow <- 
   workflow() %>% 
   add_model(lr_mod) %>% 
   add_recipe(lr_recipe)
 lr_workflow
 ```
+
 
 ```{r}
 lr_fit <- 
